# term-webgl2

./: .cliffignore  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  Trunk.toml  build.zsh  cliff.toml  index.html  release.toml  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  pages.yml  quick-test.yml  release.yml
beamterm-atlas/: Cargo.toml  README.md
beamterm-atlas/src/: cli.rs  coordinate.rs  font_discovery.rs  generator.rs  glyph_set.rs  grapheme.rs  main.rs  raster_config.rs  verify_atlas_main.rs
beamterm-data/: Cargo.toml  README.md
beamterm-data/atlas/: bitmap_font.atlas
beamterm-data/src/: atlas.rs  glyph.rs  lib.rs  serialization.rs
beamterm-renderer/: Cargo.toml  index.html
beamterm-renderer/src/: cell.rs  error.rs  input.rs  js.rs  lib.rs  main.rs  mat4.rs  mouse.rs  terminal.rs  wasm.rs
beamterm-renderer/src/gl/: atlas.rs  buffer.rs  cell_query.rs  context.rs  mod.rs  program.rs  renderer.rs  selection.rs  terminal_grid.rs  texture.rs  ubo.rs
beamterm-renderer/src/shaders/: cell.frag
bitmap-font/: Cargo.toml  README.md
bitmap-font/src/: coordinate.rs  font_discovery.rs  generator.rs  grapheme.rs  main.rs  raster_config.rs  verify_atlas_main.rs
data/: bitmap_font.atlas  bitmap_font.json  bitmap_font.metadata
font-atlas/: Cargo.toml
font-atlas/src/: atlas.rs  glyph.rs  lib.rs  serialization.rs
js/: .gitignore  .npmignore  README.md  build.js  package-lock.json  package.json
js/examples/: landing-page.html  setup-examples.zsh
js/examples/api-demo/: README.md  index.html  main.js  package.json  vite.config.js
js/examples/selection-demo/: README.md  index.html  main.js  package.json  vite.config.js
js/examples/vite/: README.md  index.html  package.json  vite.config.ts
js/examples/vite/src/: main.ts
js/examples/webpack/: README.md  check-imports.js  package-lock.json  package.json  webpack.config.js
js/examples/webpack/src/: index.html  index.js
js/scripts/: build-examples.js
js/test/: test-cdn.html  test-node.js  test-wasm.html
scripts/: README  build-wasm.zsh  check-wasm.zsh  prepare-js-release.zsh  publish-npm.zsh  release.zsh  setup-js.zsh
src/: bitmap_font.rs  error.rs  main.rs  mat4.rs
src/gl/: gl_state.rs  mod.rs  renderer.rs  shader_program.rs  texture.rs  vertex.rs
src/shaders/: cell.frag  cell.vert  mod.rs
term-renderer/: Cargo.toml
term-renderer/src/: lib.rs  main.rs  mat4.rs
term-renderer/src/gl/: atlas.rs  program.rs  renderer.rs  terminal_grid.rs  texture.rs
term-renderer/src/shaders/: cell.frag  cell.vert
web/: Cargo.toml
web/src/: bitmap_font.rs  error.rs  font_atlas.rs  js.rs  lib.rs  main.rs
web/src/gl/: atlas.rs  buffer.rs  context.rs  mod.rs  program.rs  renderer.rs  terminal_grid.rs  texture.rs  ubo.rs  vertex.rs
web/src/shaders/: basic.frag  basic.vert  cell.frag  cell.vert
