[package]
name = "webgl2"
version = "0.1.0"
edition = "2021"

[dependencies]
bon = "3.6.3"
compact_str = "0.9.0"
console_error_panic_hook = "0.1.7"
thiserror = "2.0.12"
web-sys = { version = "0.3.77", features = [
    'console',
    'CanvasRenderingContext2d',
    'Document',
    'Element',
    'HtmlCanvasElement',
    'HtmlElement',
    'KeyboardEvent',
    'Location',
    'Navigator',
    'Node',
    'Performance',
    'Screen',
    'WebGl2RenderingContext',
    'WebGlBuffer',
    'WebGlProgram',
    'WebGlRenderingContext',
    'WebGlShader',
    'WebGlTexture',
    'WebGlUniformLocation',
    'WebGlVertexArrayObject',
    'Window',
] }
web-time = "1.1.0"
js-sys = "0.3.77"
fontdue = "0.9.3"
image = "0.25.6"
serde_json = "1.0.140"

[[bin]]
name = "webgl2"
path = "src/main.rs"

[[bin]]
name = "bitmap-font"
path = "src/bitmap_font.rs"


