[workspace]
resolver = "2"
members = [
    "beamterm-atlas",
    "beamterm-data", 
    "beamterm-renderer",
]

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["Adrian Papari <junkdog@angelhill.net>"]
repository = "https://github.com/junkdog/beamterm"
homepage = "https://github.com/junkdog/beamterm"
documentation = "https://docs.rs/beamterm"
keywords = ["terminal", "webgl", "wasm", "rendering", "gpu"]
categories = ["graphics", "wasm", "web-programming"]

[workspace.dependencies]
compact_str = "0.9.0"
thiserror = "2.0.12"
web-sys = "0.3.77"
js-sys = "0.3.77"
console_error_panic_hook = "0.1.7"
web-time = "1.1.0"

[workspace.metadata.docs.rs]
default-target = "wasm32-unknown-unknown"

[workspace.lints.rust]
dead_code = "allow"
unused_variables = "deny"
unused_imports = "deny"
unused_mut = "allow"
unused_assignments = "allow"

[workspace.lints.clippy]
inefficient_to_string = "warn"
large_enum_variant = "warn"
manual_string_new = "warn"
needless_collect = "warn"

needless_return = "warn"
redundant_closure_for_method_calls = "warn"
type_complexity = "warn"
