[package]
name = "beamterm-atlas"
description = "Font atlas generator for beamterm WebGL terminal renderer, creating GPU-optimized texture arrays from TTF/OTF fonts"
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
beamterm-data = { path = "../beamterm-data", version = "0.1.0" }
color-eyre = "0.6.4"
cosmic-text = "0.14.2"
emojis = "0.6.4"
unicode-segmentation = "1.12.0"
colored = "3.0.0"

[[bin]]
name = "beamterm-atlas"
path = "src/main.rs"

[[bin]]
name = "verify-atlas"
path = "src/verify_atlas_main.rs"

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"

# Exclude generated atlas files and build artifacts
[package.metadata.cargo-machete]
ignored = ["color-eyre"]  # Used in main.rs
