[package]
name = "beamterm-renderer"
description = "High-performance WebGL2 terminal renderer for beamterm, targeting sub-millisecond render times in web browsers"
readme = "../README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
beamterm-data = { path = "../beamterm-data", version = "0.1.0" }
compact_str = { workspace = true }
console_error_panic_hook = { workspace = true }
thiserror = { workspace = true }
js-sys = { workspace = true }

[dependencies.web-sys]
workspace = true
features = [
    'console',
    'CanvasRenderingContext2d',
    'Document',
    'Element',
    'HtmlCanvasElement',
    'HtmlElement',
    'ImageData',
    'KeyboardEvent',
    'Location',
    'Navigator',
    'Node',
    'Performance',
    'Screen',
    'WebGl2RenderingContext',
    'WebGlBuffer',
    'WebGlProgram',
    'WebGlRenderingContext',
    'WebGlShader',
    'WebGlTexture',
    'WebGlUniformLocation',
    'WebGlVertexArrayObject',
    'Window',
]

[[bin]]
name = "beamterm-renderer"
path = "src/main.rs"
required-features = []

[package.metadata.docs.rs]
all-features = true
default-target = "wasm32-unknown-unknown"

# Exclude shader files from package (they're included via include_str!)
[package.metadata.cargo-machete]
ignored = ["console_error_panic_hook", "web-time"]  # Used in examples and bins
