[package]
name = "bitmap-font"
version = "0.1.0"
edition = "2021"

[dependencies]
font-atlas = { path = "../font-atlas" }
color-eyre = "0.6.4"
cosmic-text = "0.14.2"
emojis = "0.6.4"
image = { workspace = true }
unicode-segmentation = "1.12.0"
colored = "3.0.0"

[[bin]]
name = "bitmap-font"
path = "src/main.rs"

[[bin]]
name = "verify-atlas"
path = "src/verify_atlas_main.rs"
