[package]
name = "term-renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
font-atlas = { path = "../font-atlas" }
compact_str = "0.9.0"
console_error_panic_hook = "0.1.7"
thiserror = { workspace = true }
web-sys = { version = "0.3.77", features = [
    'console',
    'CanvasRenderingContext2d',
    'Document',
    'Element',
    'HtmlCanvasElement',
    'HtmlElement',
    'ImageData',
    'KeyboardEvent',
    'Location',
    'Navigator',
    'Node',
    'Performance',
    'Screen',
    'WebGl2RenderingContext',
    'WebGlBuffer',
    'WebGlProgram',
    'WebGlRenderingContext',
    'WebGlShader',
    'WebGlTexture',
    'WebGlUniformLocation',
    'WebGlVertexArrayObject',
    'Window',
] }
web-time = "1.1.0"
js-sys = "0.3.77"
image = { workspace = true }

[[bin]]
name = "webgl2"
path = "src/main.rs"

