[package]
name = "webgl2"
version = "0.1.0"
edition = "2021"

[dependencies]
bitmap-font = { path = "../bitmap-font" }
bon = "3.6.3"
compact_str = "0.9.0"
console_error_panic_hook = "0.1.7"
thiserror = { workspace = true }
web-sys = { version = "0.3.77", features = [
    'console',
    'CanvasRenderingContext2d',
    'Document',
    'Element',
    'HtmlCanvasElement',
    'HtmlElement',
    'KeyboardEvent',
    'Location',
    'Navigator',
    'Node',
    'Performance',
    'Screen',
    'WebGl2RenderingContext',
    'WebGlBuffer',
    'WebGlProgram',
    'WebGlRenderingContext',
    'WebGlShader',
    'WebGlTexture',
    'WebGlUniformLocation',
    'WebGlVertexArrayObject',
    'Window',
] }
web-time = "1.1.0"
js-sys = "0.3.77"
image = { workspace = true }
serde_json = { workspace = true }

[[bin]]
name = "webgl2"
path = "src/main.rs"

